--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,24 +17,16 @@ header{
 section{
     
     min-height: 90vh;
-    background: orange;
-    background-image: url(/assets/img/section.jpg) ;
+    background-image: url(../../assets/img/section.jpg) ;
     background-size: cover;
     background-position:  center;
     background-attachment: fixed;   
-    
+    margin: 0 auto;
 }
-
-/* @media (max-width: 767px) {
-section{
-    background-position: left;
-}
-} */
 
 
 
 footer{
-    
     height: 50px;
     background: #69b6d4;
 }
@@ -43,7 +35,8 @@ h1{
     position: absolute;
     padding: 20px 50px;
     font-family: Georgia, 'Times New Roman', Times, serif;}
-    h1 a{
+
+h1 a{
         color: aliceblue;
     }
 
@@ -73,7 +66,9 @@ h2{
     margin-top: 0px;
     color: rgb(255, 255, 255);
     padding: 40px;
-    font-family: Georgia, 'Times New Roman', Times, serif;} 
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-shadow: 1px 2px 2px black , 3px 3px 5px black;
+} 
 
 img{
     width: 100px;
@@ -88,7 +83,7 @@ img{
     padding: 40px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-shadow: 1px 1px 5px black, 3px 3px 5px black, 0 0 12px black;
-   
+    margin: 0;
 }
     
 .presentacion{
@@ -109,20 +104,33 @@ img{
 } 
 
 .fotos{
-    margin-top: 0px;
-    padding-left: 210px;
-    padding-top: 50px;
-    display: inline-block;
-
+    margin: 0;
+    padding: 0;
 }
 
-.fotos img{
-    
-    align-items: center;
-    width: 500px;
-    display: inline-block;
+.columnas img{
+    width: 100%;
+    margin: 0;
+    margin-top: 8px;
 }
 
+.filas{
+    display: flex;
+    padding: 5px;
+    flex-wrap: wrap;
+   
+}
+
+.columnas{
+flex: 25%;
+padding: 5px;
+}
+
+@media (max-width: 766px) {
+    .columnas{
+        flex: 100%;
+    }
+}
 
 .contacto{
   
@@ -131,12 +139,16 @@ img{
 
 .videos{
     text-align: center;
-    padding-top: 200px;  
+    padding-top: 2px;  
 }
 
-iframe{
-    margin left: 40px;
+.ratio{
+    margin-top: 20px;
+    padding: 0px;
 }
+/* iframe{
+    margin-left: 40px;
+} */
 
 
 form{
